# html2tree

./: .g.conf  .gitignore  CHANGELOG.md  README.md  TODO.md  examples-post-processing-only.sh  examples-processing.sh  examples.sh  html2tree.sh  html_sample-post-processing-only.sh  html_sample-processing.sh  html_sample.sh  pyproject.toml  requirements.txt  tests.sh  venv.sh
.github/workflows/: release-uvx.yml
docs/: requirements.md
html_sample/: document.html  index.html  toc.html
src/html2tree/: __init__.py  __main__.py  cli.py  core.py  latex.py  version.py
tests/: test_cli.py  test_examples.py  test_toc_validation.py
