[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2tree"
version = "0.0.2"
description = "CLI for html2tree"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.11.6",
  "matplotlib>=3.8.0",
  "pillow>=10.0.0",
  "pylatexenc>=2.10",
]

[project.scripts]
html2tree = "html2tree.cli:main"
